--- a/Html/rPool.html
+++ b/Html/rPool.html
@@ -233,11 +233,12 @@
       }
       /* <-----------------------FAQ's------------------------------------------------ */
       .btn{
-            width: 200px;
+            width: 100%;
             margin: 0px 20px;
-            padding: 20px;
+            /* padding: 20px; */
             border-bottom: 1px solid grey;
             margin-bottom: 20px;
+            padding: 2% 5%;
         }
         .btn:hover{
             cursor: pointer;
@@ -266,7 +267,7 @@
         }
         .content{
             width: 90%;
-            margin:0% 2%;
+            margin:0% 5%;
             padding: 10px;
             box-shadow: 2px 8px 8px pink;
             font-family: 'Montserrat', sans-serif;
@@ -690,13 +691,13 @@
 
         <h3 style="width: 90%;margin:auto;font-family: 'Montserrat', sans-serif; margin-top: 70px;">FAQ's</h3>
        
-        <div onclick="bt()" class="btn" id="id1">1.GENERAL</div><br>
-        <div onclick="bt2()" class="btn" id="id2">2.ACCOUNT</div><br>
-        <div onclick="bt3()" class="btn" id="id3">3.OFFER A RIDE</div><br>
-        <div onclick="bt4()" class="btn" id="id4">4.SEEKING A RIDE</div><br>
-        <div onclick="bt5()" class="btn" id="id5">5.OUTSTATION</div><br>
-        <div onclick="bt6()" class="btn" id="id6">6.PAYMENT/REDEMPTION</div><br>
-        <div onclick="bt7()" class="btn" id="id7">7.SAFETY</div><br>
+        <div onclick="bt()" class="btn" id="id1"><div style="float: left;text-align: left;width: 90%; padding-left: 2%;font-size: 20px;font-weight: 600;"> 1. GENERAL</div><div style="float: left;width: 10%;" id="minus1">➕</div></div><br>
+        <div onclick="bt2()" class="btn" id="id2"><div style="float: left;text-align: left;width: 90%; padding-left: 2%;font-size: 20px;font-weight: 600;"> 2. ACCOUNT</div><div style="float: left;width: 10%;" id="minus2">➕</div></div><br>
+        <div onclick="bt3()" class="btn" id="id3"><div style="float: left;text-align: left;width: 90%; padding-left: 2%;font-size: 20px;font-weight: 600;"> 3. OFFER A RIDE</div><div style="float: left;width: 10%;" id="minus3">➕</div></div><br>
+        <div onclick="bt4()" class="btn" id="id4"><div style="float: left;text-align: left;width: 90%; padding-left: 2%;font-size: 20px;font-weight: 600;"> 4. SEEKING A RIDE</div><div style="float: left;width: 10%;" id="minus4">➕</div></div><br>
+        <div onclick="bt5()" class="btn" id="id5"><div style="float: left;text-align: left;width: 90%; padding-left: 2%;font-size: 20px;font-weight: 600;"> 5. OUTSTATION</div><div style="float: left;width: 10%;" id="minus5">➕</div></div><br>
+        <div onclick="bt6()" class="btn" id="id6"><div style="float: left;text-align: left;width: 90%; padding-left: 2%;font-size: 20px;font-weight: 600;"> 6. PAYMENT/REDEMPTION</div><div style="float: left;width: 10%;" id="minus6">➕</div></div><br>
+        <div onclick="bt7()" class="btn" id="id7"><div style="float: left;text-align: left;width: 90%; padding-left: 2%;font-size: 20px;font-weight: 600;"> 7. SAFETY</div><div style="float: left;width: 10%;" id="minus7">➕</div></div><br>
         <div id="id8"></div>
     
         <div id="c1" class="content">
@@ -948,10 +949,14 @@ function bt(){
     if(a==1){
         body.insertBefore(div1,btn2);
         document.getElementById('c1').style.display = "block";
+        const minus = document.getElementById('minus1');
+        minus.innerHTML = "➖";
         return a = 0;
     }
     else{
         document.getElementById('c1').style.display = "none";
+        const minus = document.getElementById('minus1');
+        minus.innerHTML = "➕";
         return a = 1;
     }
 }
@@ -960,10 +965,14 @@ function bt2(){
     if(b==1){
         body.insertBefore(div2,btn3);
         document.getElementById('c2').style.display = "block";
+        const minus2 = document.getElementById('minus2');
+        minus2.innerHTML = "➖";
         return b = 0;
     }
     else{
         document.getElementById('c2').style.display = "none";
+        const minus2 = document.getElementById('minus2');
+        minus2.innerHTML = "➕";
         return b = 1;
     }
 }
@@ -972,10 +981,14 @@ function bt3(){
     if(c==1){
         body.insertBefore(div3,btn4);
         document.getElementById('c3').style.display = "block";
+        const minus3 = document.getElementById('minus3');
+        minus3.innerHTML = "➖";
         return c = 0;
     }
     else{
         document.getElementById('c3').style.display = "none";
+        const minus3 = document.getElementById('minus3');
+        minus3.innerHTML = "➕";
         return c = 1;
     }
 }
@@ -984,10 +997,14 @@ function bt4(){
     if(d==1){
         body.insertBefore(div4,btn5);
         document.getElementById('c4').style.display = "block";
+        const minus4 = document.getElementById('minus4');
+        minus4.innerHTML = "➖";
         return d = 0;
     }
     else{
         document.getElementById('c4').style.display = "none";
+        const minus4 = document.getElementById('minus4');
+        minus4.innerHTML = "➕";
         return d = 1;
     }
 }
@@ -996,10 +1013,14 @@ function bt5(){
     if(e==1){
         body.insertBefore(div5,btn6);
         document.getElementById('c5').style.display = "block";
+        const minus5 = document.getElementById('minus5');
+        minus5.innerHTML = "➖";
         return e = 0;
     }
     else{
         document.getElementById('c5').style.display = "none";
+        const minus5 = document.getElementById('minus5');
+        minus5.innerHTML = "➕";
         return e = 1;
     }
 }
@@ -1008,10 +1029,14 @@ function bt6(){
     if(f==1){
         body.insertBefore(div6,btn7);
         document.getElementById('c6').style.display = "block";
+        const minus6 = document.getElementById('minus6');
+        minus6.innerHTML = "➖";
         return f = 0;
     }
     else{
         document.getElementById('c6').style.display = "none";
+        const minus6 = document.getElementById('minus6');
+        minus6.innerHTML = "➕";
         return f = 1;
     }
 }
@@ -1020,10 +1045,14 @@ function bt7(){
     if(g==1){
         body.insertBefore(div7,div8);
         document.getElementById('c7').style.display = "block";
+        const minus7 = document.getElementById('minus7');
+        minus7.innerHTML = "➖";
         return g = 0;
     }
     else{
         document.getElementById('c7').style.display = "none";
+        const minus7 = document.getElementById('minus7');
+        minus7.innerHTML = "➕";
         return g = 1;
     }
 }
