Commit by Gurbir, 5th Nov

--- a/Html/busHire.html
+++ b/Html/busHire.html
@@ -251,9 +251,9 @@
             <div class="container c-main">
                 <div class="innerContainer safetyWrapper">
                     <div class="safetyHeader">
-                        <div id="safetyHeaderLeft">
+                        <div class="safetyHeaderLeft">
                             <img src="../Resources/logo-safety-plus.svg" alt="">
-                            <div id="safetyHeaderText">
+                            <div class="safetyHeaderText">
                                 <h3>Safety+</h3>
                                 <p>Your safety is our top priority.</p>
                             </div>
