--- a/Html/homePage.html
+++ b/Html/homePage.html
@@ -69,8 +69,7 @@
             </div>
             <div class="nav-item selected">BUS TICKETS</div>
             <div class="nav-item rpool">
-              rPool
-              <span class="rpool-new">New</span>
+              <a href="../Html/rPool.html" target="_blank"> rPool <span class="rpool-new">New</span></a>
             </div>
             <div class="nav-item">BUS HIRE</div>
           </div>
@@ -110,7 +109,6 @@
       </div>
     </nav>
 
-    
     <main>
       <section class="banner">
         <div class="banner-img">
@@ -273,19 +271,24 @@
                 <p>
                   Enjoy the following exclusive features on the redBus app
                   <br />
-                  <br/>
+                  <br />
                   Last Minute Booking - In a hurry to book a bus at the last
                   minute? Choose the bus passing from your nearest boarding
-                  point and book in a few easy steps. <br /><br/>
+                  point and book in a few easy steps. <br /><br />
                   Boarding Point Navigation - Never lose your way while
-                  travelling to your boarding point! <br /><br/>
+                  travelling to your boarding point! <br /><br />
                   Comprehensive Ticket Details- Everything that you need to make
                   the travel hassle free - rest stop details, boarding point
-                  images, chat with co-passengers, wake-up alarm and much more!<br /><br/>
+                  images, chat with co-passengers, wake-up alarm and much
+                  more!<br /><br />
                   Enter your mobile number below to download the redBus mobile
                   app.
                 </p>
-                <input type="text" value="+91" style="width: 50px; font-size:14px;" />
+                <input
+                  type="text"
+                  value="+91"
+                  style="width: 50px; font-size: 14px"
+                />
                 <input type="text" placeholder="Enter your mobile number" />
               </div>
 
