removed not used files

--- a/Html/userQuotes.html
+++ b/Html/userQuotes.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Quotes</title>
+    <link
+    href="https://www.redbus.in/favicon.ico?root=rbus"
+    rel="shortcut icon"
+  />
+    <title>Bus Hire: Rent Volvo, AC buses, Mini Buses, Tempo Travellers &amp; Innova Cars - Book Online</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -319,6 +323,89 @@
             
         </div>
     </div>
+
+        <!-- FOOTER -->
+        <footer>
+            <div
+              class="footer-div"
+              style="flex-wrap: wrap; padding: 16px; justify-content: space-evenly"
+            >
+              <div
+                class="footer-col"
+                style="
+                  align-self: flex-start;
+                  margin-right: 12px;
+                  margin-bottom: 12px;
+                "
+              >
+                <div class="col-head">Book</div>
+                <a class="col-item" href="/bus-tickets/">Bus Tickets</a
+                ><a class="col-item" href="/bushire/">Bus Hire</a
+                ><a class="col-item" href="/tempo-traveller/">Tempo Traveller</a
+                ><a class="col-item" href="/car-rental/">Car Rentals</a>
+              </div>
+              <div
+                class="footer-col"
+                style="
+                  align-self: flex-start;
+                  margin-right: 12px;
+                  margin-bottom: 12px;
+                "
+              >
+                <div class="col-head">About</div>
+                <a class="col-item" href="/info/aboutus">About Us</a
+                ><a class="col-item" href="/info/contactus">Contact Us</a>
+              </div>
+              <div
+                class="footer-col"
+                style="
+                  align-self: flex-start;
+                  margin-right: 12px;
+                  margin-bottom: 12px;
+                "
+              >
+                <div class="col-head">Info</div>
+                <a class="col-item" href="/info/termscondition">T &amp; C</a
+                ><a class="col-item" href="/info/privacypolicy">Privacy Policy</a
+                ><a class="col-item" href="/info/cookiepolicy">Cookie Policy</a
+                ><a class="col-item" href="/info/faq">FAQ</a>
+              </div>
+              <div
+                class="_1bg-3j4DyVb_Cg7yoh1Let"
+                style="
+                  align-self: flex-start;
+                  margin-right: 12px;
+                  margin-bottom: 12px;
+                "
+              >
+                <div class="col-head">Global Sites</div>
+                <a class="col-item" href="https://www.redbus.in">India</a
+                ><a class="col-item" href="https://www.redbus.sg">Singapore</a
+                ><a class="col-item" href="https://www.redbus.my">Malaysia</a
+                ><a class="col-item" href="https://www.redbus.id">Indonesia</a
+                ><a class="col-item" href="https://www.redbus.pe">Peru</a
+                ><a class="col-item" href="https://www.redbus.co">Colombia</a>
+              </div>
+              <div
+                class="footer-col"
+                style="
+                  align-self: flex-start;
+                  margin-right: 12px;
+                  margin-bottom: 12px;
+                "
+              >
+                <div class="col-head">Our Partners</div>
+                <a class="col-item" href="https://www.goibibo.com">Goibibo</a
+                ><a class="col-item" href="https://www.makemytrip.com">Makemytrip</a>
+              </div>
+              <div class="copyright">
+                <img
+                  src="	https://www.redbus.in/bushire/static/mwebv2/header/logo_rb.svg"
+                />
+                <div class="footerText">Ⓒ 2020 ibibogroup All rights reserved</div>
+              </div>
+            </div>
+          </footer>
     <script type="module" src="../JavaScript/script.js"></script>
 </body>
 </html>
