--- a/Html/userQuotes.html
+++ b/Html/userQuotes.html
@@ -18,12 +18,32 @@
     <nav class='navbar bg-red c-white'>
         <div class="quotesContainer c-white">
             <div class="pages">
-                <div>
-                    <img src="https://www.redbus.in/bushire/static/webv2/home/logo-rb.svg" alt="">
-                </div>
-                <div>BUS TICKETS</div>
-                <div>rPool</div>
-                <div class='active'><a href="busHire.html">BUS HIRE</a></div>
+                <div class="leftPages">
+                    <div>
+                      <a href="../Html/homePage.html"><img src="https://www.redbus.in/bushire/static/webv2/home/logo-rb.svg" alt=""></a>
+                  </div>
+                  <div><a href="../Html/busTicket.html">BUS TICKETS</a></div>
+                  <div><a href="../Html/rPool.html">rPool</a></div>
+                  <div class='active'><a href="../Html/busHire.html">BUS HIRE</a></div>
+                  </div>
+                  <div class="rightPages">
+                    <div>
+                      <a class='pageLink' href="#">
+                        <div class='manageBooking'>            
+                          <div>Manage Booking</div>
+                          <img src="../Resources/down-arrow-white.svg" alt="">
+                        </div>
+                      </a>
+                    </div>
+                    <div>
+                      <a class='pageLink' href="#">
+                        <div class='userIcon'>            
+                          <img src="../Resources/ic-user-not-logged-in.svg" alt="">
+                          <img src="../Resources/down-arrow-white.svg" alt="">
+                        </div>
+                      </a>
+                    </div>
+                  </div>
             </div>
         </div>
     </nav>
@@ -318,10 +338,13 @@
                         <div class="_3xi5cUmNo230-F9hBdHDR3">
                             <div class="_21bMrYz_KBTE88g6XPOnQo">
                                 <div class="_125-vngF-ahqdKkqvfI39D">
-                                    <img class="_35iSm1TQczRWDX3McBBfPN" src="../Resources/callbackbtn.png" alt="requestcallbackbtn"></div><div class="_2hDzZ5hp8Y9zPou2TCIm7E">Have questions? <span style="font-weight: bold;">Request Call Back</span></div></div></div></div></div>
+                                    <img class="_35iSm1TQczRWDX3McBBfPN" src="../Resources/callbackbtn.png" alt="requestcallbackbtn"></div><div class="_2hDzZ5hp8Y9zPou2TCIm7E">Have questions? <span style="font-weight: bold;">Request Call Back</span></div></div></div></div>
+                                </div>
+                
             </div>
             
         </div>
+        <div class="_3hMIKUaq-ANswvuxWaMAfz _1bg-3j4DyVb_Cg7yoh1Let quotesContainer" style='padding-bottom:40px'><div class="_2eI_bbHCWG4Xotp-v_qaGt">Didn't find what you were looking for ?</div><div class="_8S98Q-rRAWl5EFaGEiejs _1tblM8zNEMa9R0DBfIK5av _3sm8pjoR7-Kxn2i19EGZ1r"><span class="_1PWZAhUPf-4UD5koGTR5jq">cancel this request</span></div></div>
     </div>
 
         <!-- FOOTER -->
