--- a/Html/vehicle.html
+++ b/Html/vehicle.html
@@ -24,15 +24,32 @@
     <nav class="navbar bg-red c-white">
       <div class="quotesContainer c-white">
         <div class="pages">
-          <div>
-            <img
-              src="https://www.redbus.in/bushire/static/webv2/home/logo-rb.svg"
-              alt=""
-            />
+          <div class="leftPages">
+            <div>
+              <a href="../Html/homePage.html"><img src="https://www.redbus.in/bushire/static/webv2/home/logo-rb.svg" alt=""></a>
           </div>
-          <div>BUS TICKETS</div>
-          <div>rPool</div>
-          <div class="active"><a href="busHire.html">BUS HIRE</a></div>
+          <div><a href="../Html/busTicket.html">BUS TICKETS</a></div>
+          <div><a href="../Html/rPool.html">rPool</a></div>
+          <div class='active'><a href="../Html/busHire.html">BUS HIRE</a></div>
+          </div>
+          <div class="rightPages">
+            <div>
+              <a class='pageLink' href="#">
+                <div class='manageBooking'>            
+                  <div>Manage Booking</div>
+                  <img src="../Resources/down-arrow-white.svg" alt="">
+                </div>
+              </a>
+            </div>
+            <div>
+              <a class='pageLink' href="#">
+                <div class='userIcon'>            
+                  <img src="../Resources/ic-user-not-logged-in.svg" alt="">
+                  <img src="../Resources/down-arrow-white.svg" alt="">
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </nav>
