--- a/Html/busHire.html
+++ b/Html/busHire.html
@@ -25,13 +25,14 @@
       <div class="container c-white">
         <div class="pages">
           <div>
-            <img
-              src="https://www.redbus.in/bushire/static/webv2/home/logo-rb.svg"
-              alt=""
-            />
+            <a href="../Html/homePage.html">
+              <img
+                src="https://www.redbus.in/bushire/static/webv2/home/logo-rb.svg"
+                alt=""
+            /></a>
           </div>
-          <div>BUS TICKETS</div>
-          <div>rPool</div>
+          <div><a href="../Html/homePage.html">BUS TICKETS</a></div>
+          <div><a href="../Html/rPool.html" target="_blank">rPool</a></div>
           <div class="active">BUS HIRE</div>
         </div>
       </div>
