--- a/Html/homePage.html
+++ b/Html/homePage.html
@@ -71,7 +71,7 @@
             <div class="nav-item rpool">
               <a href="../Html/rPool.html" target="_blank"> rPool <span class="rpool-new">New</span></a>
             </div>
-            <div class="nav-item">BUS HIRE</div>
+            <div class="nav-item"><a href="../Html/busHire.html" target="_blank">BUS HIRE</a></div>
           </div>
           <div class="nav-left">
             <div class="nav-item-right">Help</div>
