--- a/Html/rPool.html
+++ b/Html/rPool.html
@@ -69,6 +69,19 @@
       .nav-rpool {
         border-bottom: 2px solid #fff;
       }
+      .navbar-collapse {
+        justify-content:space-between !important;
+      }
+
+      .navbar-collapse div{
+        width: 100%;
+        display: flex;
+        justify-content:space-between !important;
+      }
+
+      .navbar-collapse div ul{
+        width: 100%;
+      }
       /* <------------------------Share your rides -------------------------------------------------------- */
 
       #shareYourRides {
@@ -454,12 +467,12 @@
     >
       <div class="container">
         <!-- Brand -->
-        <a class="navbar-brand" href="#"
+        <!-- <a class="navbar-brand" href="#"
           ><img
             src="https://i.postimg.cc/zXFNsGkg/redbus-white.png"
             alt="redBus"
             width="60px"
-        /></a>
+        /></a> -->
 
         <!-- Toggler/collapsibe Button -->
         <button
