--- a/Html/vehicle.html
+++ b/Html/vehicle.html
@@ -24,15 +24,47 @@
     <nav class="navbar bg-red c-white">
       <div class="quotesContainer c-white">
         <div class="pages">
-          <div>
-            <img
-              src="https://www.redbus.in/bushire/static/webv2/home/logo-rb.svg"
-              alt=""
-            />
+          <div class="leftPages">
+            <div>
+              <a href="../Html/homePage.html"
+                ><img
+                  src="https://www.redbus.in/bushire/static/webv2/home/logo-rb.svg"
+                  alt=""
+              /></a>
+            </div>
+            <div><a href="../Html/busTicket.html">BUS TICKETS</a></div>
+            <div><a href="../Html/rPool.html">rPool</a></div>
+            <div class="active">
+              <a href="../Html/busHire.html">BUS HIRE</a>
+            </div>
           </div>
-          <div>BUS TICKETS</div>
-          <div>rPool</div>
-          <div class="active"><a href="busHire.html">BUS HIRE</a></div>
+          <div class="rightPages">
+            <div>
+              <a class="pageLink" href="#">
+                <div class="manageBooking">
+                  <div>Manage Booking</div>
+                  <img
+                    src="	https://www.redbus.in/bushire/static/webv2/home/2%20(6).svg"
+                    alt=""
+                  />
+                </div>
+              </a>
+            </div>
+            <div>
+              <a class="pageLink" href="#">
+                <div class="userIcon">
+                  <img
+                    src="	https://www.redbus.in/bushire/static/mwebv2/header/ic-logged-in-user.svg"
+                    alt=""
+                  />
+                  <img
+                    src="	https://www.redbus.in/bushire/static/webv2/home/2%20(6).svg"
+                    alt=""
+                  />
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </nav>
