--- a/Html/userQuotes.html
+++ b/Html/userQuotes.html
@@ -357,6 +357,8 @@
             </div>
             
         </div>
+
+        <div class="_3hMIKUaq-ANswvuxWaMAfz _1bg-3j4DyVb_Cg7yoh1Let quotesContainer" style='padding-bottom:40px'><div class="_2eI_bbHCWG4Xotp-v_qaGt">Didn't find what you were looking for ?</div><div class="_8S98Q-rRAWl5EFaGEiejs _1tblM8zNEMa9R0DBfIK5av _3sm8pjoR7-Kxn2i19EGZ1r"><span class="_1PWZAhUPf-4UD5koGTR5jq">cancel this request</span></div></div>
     </div>
 
         <!-- FOOTER -->
